# rust-web-scraper

./: .firebaserc  Cargo.toml  Dockerfile  Procfile  README.md  firebase.js  firebase.json  index.html  package-lock.json  scrape.code-workspace  script.js
.firebase/: hosting.KHB1YmxpYyk.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/src/: Cargo.toml  main.rs
src/: main.rs
static/: index.html  script.js  style.css
