[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
serde = "1.0.198"
rocket = "0.5.0"
serde_json = "1.0.40" 
actix-web = "4.0.0"
async-std = "1.8.0"
actix-rt = "2.5.0"
actix-cors = "0.7.0"
hyper = "0.14"

